After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 663238 - colorspace: fix width/height mismatches
colorspace: fix width/height mismatches
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-02 13:26 UTC by Vincent Penquerc'h
Modified: 2011-11-24 09:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
colorspace: fix width/height mismatches (2.58 KB, patch)
2011-11-02 13:26 UTC, Vincent Penquerc'h
committed Details | Review

Description Vincent Penquerc'h 2011-11-02 13:26:38 UTC
colorspace: fix width/height mismatches
Comment 1 Vincent Penquerc'h 2011-11-02 13:26:40 UTC
Created attachment 200498 [details] [review]
colorspace: fix width/height mismatches
Comment 2 Sebastian Dröge (slomo) 2011-11-24 09:58:42 UTC
commit 1d0f770545fe5ba9ab68d21b22b64ddfc5f11d05
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Wed Nov 2 13:25:56 2011 +0000

    colorspace: fix width/height mismatches
    
    https://bugzilla.gnome.org/show_bug.cgi?id=663238