colorspace: fix width/height mismatches

https://bugzilla.gnome.org/show_bug.cgi?id=663238