gst/colorspace/colorspace.c
@@ -1956,7 +1956,7 @@ convert_YUY2_I420 (ColorspaceConvert * convert, guint8 * dest,
   }
 
   /* now handle last line */
-  if (convert->width & 1) {
+  if (convert->height & 1) {
     getline_YUY2 (convert, convert->tmpline, src, convert->height - 1);
     putline_I420 (convert, dest, convert->tmpline, convert->height - 1);
   }
@@ -1969,10 +1969,10 @@ convert_YUY2_AYUV (ColorspaceConvert * convert, guint8 * dest,
   cogorc_convert_YUY2_AYUV (FRAME_GET_LINE (dest, 0, 0),
       convert->dest_stride[0], FRAME_GET_LINE (src, 0, 0),
       convert->src_stride[0], (convert->width + 1) / 2,
-      convert->width & 1 ? convert->height - 1 : convert->height);
+      convert->height & 1 ? convert->height - 1 : convert->height);
 
   /* now handle last line */
-  if (convert->width & 1) {
+  if (convert->height & 1) {
     getline_YUY2 (convert, convert->tmpline, src, convert->height - 1);
     putline_AYUV (convert, dest, convert->tmpline, convert->height - 1);
   }
@@ -2030,10 +2030,10 @@ convert_UYVY_AYUV (ColorspaceConvert * convert, guint8 * dest,
   cogorc_convert_UYVY_AYUV (FRAME_GET_LINE (dest, 0, 0),
       convert->dest_stride[0], FRAME_GET_LINE (src, 0, 0),
       convert->src_stride[0], (convert->width + 1) / 2,
-      convert->width & 1 ? convert->height - 1 : convert->height);
+      convert->height & 1 ? convert->height - 1 : convert->height);
 
   /* now handle last line */
-  if (convert->width & 1) {
+  if (convert->height & 1) {
     getline_UYVY (convert, convert->tmpline, src, convert->height - 1);
     putline_AYUV (convert, dest, convert->tmpline, convert->height - 1);
   }
@@ -2110,7 +2110,7 @@ convert_AYUV_Y42B (ColorspaceConvert * convert, guint8 * dest,
       convert->dest_stride[1], FRAME_GET_LINE (dest, 2, 0),
       convert->dest_stride[2], FRAME_GET_LINE (src, 0, 0),
       convert->src_stride[0], (convert->width + 1) / 2,
-      convert->width & 1 ? convert->height - 1 : convert->height);
+      convert->height & 1 ? convert->height - 1 : convert->height);
 
   /* now handle last line */
   if (convert->height & 1) {
